My initial commit

--- a/comments.html
+++ b/comments.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
+<!----list-1  created-->
 <ul style="list-style-type:circle;">
 <li><h2>Days Of The Week</h2></li>
 <ul style="list-style-type:square;">
@@ -13,6 +14,8 @@
   <li>Satrday</li>
 </ul> 
 </ul>
+<!---list-1ended-->
+<!----list-2 started-->
 <ul style="list-style-type:circle;">
 <li><h2>Months Of The Year</h2></li>
 <ol type="i">
@@ -29,7 +32,9 @@
   <li>November</li>
   <li>December</li>
 </ol> 
-</ul> 
+</ul>
+<!--list-2 ended--> 
+<!--list-3 starting-->
 <ul style="list-style-type:circle;">
 <li><h2>Definitions Of Four Seasons</h2></li>
     <dl>
@@ -43,6 +48,8 @@
     <dd>-The winter season in India comes in the months of January and February. As per the Hindu calendar, this season occurs in the months of Magha and Phalguna. This season lies between pre winter and spring season. This season is characterized by dryness, cold winds, occasional rainfall and snowfall.</dd>
 </dl>
 </ul>
+<!--list-3 ended-->
+<!--list-4 started-->
 <ul style="list-style-type:circle;">
 <li><h2>Months Of Seasons</h2></li>
 <ul style="list-style-type:square;">
@@ -83,7 +90,7 @@
 </ul>
 
 </u>
-
+<!--list-4 ended-->
 </body>
 </html>
 
