--- a/src/Assignment-4/assignment4.html
+++ b/src/Assignment-4/assignment4.html
@@ -6,13 +6,71 @@
 	<meta http-equiv="Pragma" content="no-cache" />
 	<meta http-equiv="Expires" content="0" />
 	<script src="bundle.js" type="text/javascript"></script>
+	<link rel="stylesheet" type="text/css" href="css/reset.css">
+	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 </head>
 
 <body>
 	<div id="container">
 
 	<!-- Start your code from here -->
+
+		<header>
+		  <h1>Dog Party!</h1>
+		  <nav>
+			<ul>
+			  <li>How</li>
+			  <li>What</li>
+			  <li>Facts</li>
+			</ul>
+		  </nav>
+		</header>
+	  
+		<section id="hero">
+		  <h2>A Site About Some Dogs</h2>
+		  <img src="dog1-sq.jpg" alt="hero dog"/>
+          <a href="http://corgis-in-space.tumblr.com/" target="_blank" class="btn">What are Dogs</a>
+
+		</section>
+	  
+		<section>
+		  <article class="three-col">
+		  <h3>How</h3>
+		  <img src="dog2-sq.jpg" alt="first image"/>
+          <p>Nap all day Gate keepers of hell yet stares at human while pushing stuff off a table. Put butt in owner's face chase mice, so run outside as soon as door open but you call this cat food? stare at the wall, play with food and get confused by dust.</p>
+          <a href="https://en.wikipedia.org/wiki/Dog" target="_blank" class="btn">How to Dog</a>
+          </article>
+
+		  <article class="three-col">
+		  <h3>What</h3>
+		  <img src="dog3-sq.jpg" alt="second image"/>
+      	  <p>Soft kitty warm kitty little ball of furr. Hunt anything that moves meowing non stop for food stand in front of the computer screen knock dish off table head butt cant eat out of my own dish, then cats take over the world hide when guests come over.</p>
+          <a href="http://www.dog-adoption-and-training-guide.com/about-dogs.html" target="_blank" class="btn">What is Dog</a>
+          </article>
+
+		  <article class="three-col">
+		  <h3>Facts</h3>
+		  <img src="dog4-sq.jpg" alt="third image"/>
+          <p>Destroy the blinds chase imaginary bugs, so lie on your belly and purr when you are asleep. Fall asleep on the washing machine give attitude hunt anything that moves groom yourself 4 hours - checked, have your beauty sleep 18 hours - checked, be fabulous for the rest of the day - checked!
+		</p>
+          <a href="http://www.livescience.com/13305-facts-dog-breeds-genetics-pets.html" target="_blank" class="btn">Dog Facts</a>
+          </article>
+
+		</section>
+	  
+		<footer>
+		  <h4>Learn About Dogs Online</h4>
+			<ul>
+				<li><img src="facebook.png"/></li>
+				<li><img src="twitter.png"/></li>
+				<li><img src="instagram.png"/></li>
+				<li><img src="linkedin"/></li>
+			</ul>
+			<a href="https://github.com/turingschool-examples/introductory-static-site" target="_blank" class="btn" >See this on GitHub</a>
+
+		</footer>
 	
+	  
 
 	<!-- End your code -->
 
