--- a/src/Assignment-5/assignment5.html
+++ b/src/Assignment-5/assignment5.html
@@ -12,7 +12,32 @@
 	<div id="container">
 
 	<!-- Start your code from here -->
+		<!-- inspiration: https://dribbble.com/shots/3784003-Plant-description-page -->
+	<div class="card">
+	  <section>
+		<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1145795/plant-1.png" alt="A leafy plant">
+	</section>
+	</div>
+	  <div class="card-content">
+		<h3>A leafy one</h3>
+		<p>Blossom dorset heath scabious ipsum. Grape hyacinth bee balm bird of paradise obedient plant african lily lily. Spring foxglove florist’s nighmare primrose.</p>
+		<p><a href="#0">So leafy</a></p>
+	  </div>
+	</div>
+	<div class="card">
+	  <section>
+		<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1145795/plant-4.png" alt="Some pointy plants">
+	  </section>
+	</div>
+	  <div class="card-content">
+		<h3>Some pointy ones</h3>
+		<p>Florem ipsum sugarbush bloom red rose waxflower coneflower ginger. Saxifrage forget-me-not obedient plant.</p>
+		<p><a href="#0">I'll take 10</a></p>
+	  </div>
+	</div>
+  </div>
 	
+	  
 
 	<!-- End your code -->
 
