my initial commit

--- a/src/Assignment-5/assignment5.html
+++ b/src/Assignment-5/assignment5.html
@@ -12,30 +12,36 @@
 	<div id="container">
 
 	<!-- Start your code from here -->
-		<!-- inspiration: https://dribbble.com/shots/3784003-Plant-description-page -->
-	<div class="card">
-	  <section>
-		<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1145795/plant-1.png" alt="A leafy plant">
-	</section>
+	<div class  = "card">
+		<section>
+			<img class = "image-1" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1145795/plant-1.png"  alt="image-1"/>
+		</section>
+			
+		<section>
+			<h1>A leafy one</h1>
+			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis illo laudantium inventore, quam sapiente officia odit repellat maiores suscipit eveniet cupiditate magnam, tempore tenetur est!
+			</p>
+			<a href="">So leafy</a>
+		</section>
+
 	</div>
-	  <div class="card-content">
-		<h3>A leafy one</h3>
-		<p>Blossom dorset heath scabious ipsum. Grape hyacinth bee balm bird of paradise obedient plant african lily lily. Spring foxglove florist’s nighmare primrose.</p>
-		<p><a href="#0">So leafy</a></p>
-	  </div>
+
+	<div class  = "card">
+		<section>
+			<img class = "image-2" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1145795/plant-4.png"  alt="image-2"/>
+		</section>
+			
+		<section>
+			<h1>Some pointy ones</h1>
+			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis illo laudantium inventore, quam sapiente officia odit repellat maiores suscipit eveniet cupiditate magnam, tempore tenetur est!
+			</p>
+			<a href="">I'll take 10</a>
+		</section>
+
 	</div>
-	<div class="card">
-	  <section>
-		<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1145795/plant-4.png" alt="Some pointy plants">
-	  </section>
-	</div>
-	  <div class="card-content">
-		<h3>Some pointy ones</h3>
-		<p>Florem ipsum sugarbush bloom red rose waxflower coneflower ginger. Saxifrage forget-me-not obedient plant.</p>
-		<p><a href="#0">I'll take 10</a></p>
-	  </div>
-	</div>
-  </div>
+
+
+
 	
 	  
 
