my initial commit

--- a/src/Assignment-5/assignment5.html
+++ b/src/Assignment-5/assignment5.html
@@ -12,7 +12,35 @@
 	<div id="container">
 
 	<!-- Start your code from here -->
-	
+	<div class  = "card">
+		<section>
+			<img class = "image-1" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1145795/plant-1.png"  alt="image-1"/>
+		</section>
+			
+		<section>
+			<h1>A leafy one</h1>
+			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis illo laudantium inventore, quam sapiente officia odit repellat maiores suscipit eveniet cupiditate magnam, tempore tenetur est!
+			</p>
+			<a href="">So leafy</a>
+		</section>
+
+	</div>
+
+	<div class  = "card">
+		<section>
+			<img class = "image-2" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1145795/plant-4.png"  alt="image-2"/>
+		</section>
+			
+		<section>
+			<h1>Some pointy ones</h1>
+			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis illo laudantium inventore, quam sapiente officia odit repellat maiores suscipit eveniet cupiditate magnam, tempore tenetur est!
+			</p>
+			<a href="">I'll take 10</a>
+		</section>
+
+	</div>
+
+
 
 	<!-- End your code -->
 
