--- a/src/Assignment-3/assignment3.html
+++ b/src/Assignment-3/assignment3.html
@@ -6,16 +6,42 @@
 	<meta http-equiv="Pragma" content="no-cache" />
 	<meta http-equiv="Expires" content="0" />
 	<script src="bundle.js" type="text/javascript"></script>
+	<link rel="stylesheet" type="text/css" href="css/assignment3.css">
 </head>
 
 <body>
 	<div id="container">
 
 	<!-- Start your code from here -->
+	<div class="parent1">
+		<div class="data1">
+			<h1>your best value proposition</h1>
+			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+			
+			<button class="button">start free trail</button>
+		</div>
+		<div class="frame1">
+			<iframe id="render-wiki"  src="https://en.wikipedia.org/wiki/wikipedia"></iframe>
+		</div>
+
+	
+	<div class="parent2">
+		<div class="data2">
+			<h1>your best value proposition</h1>
+			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+		
+			<button class="button1">get start </button>
+		</div>
+		<div class="frame2">
+			<iframe  id="render-dictionary"  src="https://www.dictionary.com"></iframe>
+        </div>
+	
+	
+	
 	
 	<!-- End your code -->
 
-	</div>
+
 </body>
 <script>
 /* DO NOT EDIT THIS CODE- WRITTERN TO PREVENT CSS CACHING */	  
